# pico_drone

./: CMakeLists.txt  README.md  drv8833.c  drv8833.h  main.c  mpu6050_i2c.c  mpu6050_i2c.h
